# ComfyUI-GG

./: README.md  __init__.py  pyproject.toml  requirements.txt
js/: update.js
nodes/: add_padding_to_image.py  for_loop_node.py  image_and_text_description_by_seed.py  image_metadata_extractor.py  input_node.py  metadata_extract_by_seed.py  output_node.py  resize_image_proportionally.py  server.py  workspace_node.py
nodes/common/: config.py  metadata_parser.py
